# cgmes_sqlite_lib

./: .gitignore  LICENSE  README.md  RELEASE.md  pyproject.toml
docs/: db.md
examples/: basic_usage.py
src/cgmes_sqlite_lib/: __init__.py  parser.py  repository.py
tests/: test_parser.py  test_repository.py
