[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cgmes-sqlite-lib"
version = "0.1.1"
description = "Parse CGMES XML files and persist normalized data into SQLite"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [
  { name = "Guilherme Borges" }
]
keywords = ["cgmes", "cim", "power-system", "sqlite", "xml"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Scientific/Engineering"
]
dependencies = []

[project.optional-dependencies]
dev = [
  "build>=1.2.2",
  "twine>=5.1.1",
  "pytest>=8.3.0"
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
